--- a/index.html
+++ b/index.html
@@ -77,6 +77,21 @@
   <footer>
       <div>&copy; 2023 Miguelano Designs</div>
       <a href="#">About</a> | <a href="#">Contact</a>
+    /* Add these styles for the footer */
+footer {
+  background-color: black;
+  padding: 8px 16px; /* 8px top and bottom, 16px on the sides */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white; /* Set text color to white */
+}
+
+footer div {
+  /* Additional styles for the copyright text inside the footer */
+  font-weight: bold;
+}
+
   </footer>
 
 </body>
