--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
       <!-- Container 1 -->
       <div class="container">
         <div class="Projects">Title 1</div>
-        <img src="FolderIcon.png" alt="FolderIcon.png" class="image">
+        <img src="FolderIcon.png" alt="FolderIcon.png" class="responsive-image">
         <div class="description">Description 1</div>
       </div>
       <!-- Container 2 -->
       <div class="container">
         <div class="Consulting">Title 2</div>
-        <img src="BizIcon.png" alt="BizIcon.png" class="image">
+        <img src="BizIcon.png" alt="BizIcon.png" class="responsive-image">
         <div class="description">Description 2</div>
       </div>
       <!-- Container 3 -->
       <div class="container">
         <div class="eBookstore">Title 3</div>
-        <img src="ShoppingBagsIcon.png" alt="ShoppingBagsIcon.png" class="image">
+        <img src="ShoppingBagsIcon.png" alt="ShoppingBagsIcon.png" class="responsive-image">
         <div class="description">Description 3</div>
       </div>
       <!-- Container 4 -->
@@ -71,7 +71,7 @@
   </main>
   <!-- Footer section -->
     <div class="container">
-        <img src="ProjMgmt.png" alt="Project Management" class="image">
+        <img src="ProjMgmt.png" alt="Project Management" class="iresponsive-image">
       </div>
 
   <footer>
