--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
     <section id="menu">
       <!-- Container 1 -->
       <div class="container">
-        <div class="Projects">Title 1</div>
+        <div class="Title">Projects</div>
         <img src="FolderIcon.png" alt="FolderIcon.png" class="responsive-image">
         <div class="description">Description 1</div>
       </div>
       <!-- Container 2 -->
       <div class="container">
-        <div class="Consulting">Title 2</div>
+        <div class="Title">Consulting</div>
         <img src="BizIcon.png" alt="BizIcon.png" class="responsive-image">
         <div class="description">Description 2</div>
       </div>
       <!-- Container 3 -->
       <div class="container">
-        <div class="eBookstore">Title 3</div>
+        <div class="Title">eBookstore</div>
         <img src="ShoppingBagsIcon.png" alt="ShoppingBagsIcon.png" class="responsive-image">
         <div class="description">Description 3</div>
       </div>
