--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
     </div>
   </header>
 </head>
+      <div class="container">
+        <!-- Profile picture -->
+      <h2>A Webfolio of Projects and Programs<h2>
+      <p>By Michael Que</p>
+      <p>San Francisco, California</p>
+        <img src="profile.jpg" alt="Profile" class="profile">
+        <!-- Two buttons -->
+        <div class="buttons">
+          <!-- Button 1 links to a Linkedin page -->
+          <a href="https://www.linkedin.com/in/michaelcque/" class="button">Linkedin</a>
+          <!-- Button 2 opens an overlay of pdf document -->
+          <button class="button" id="open">Resume</button>
+        </div>
+        </div>
   <!-- Main section -->
   <main id="main">
     <!-- Menu section with four containers -->
@@ -49,16 +63,7 @@
         <div class="description">Description 3</div>
       </div>
       <!-- Container 4 -->
-      <div class="container">
-        <!-- Profile picture -->
-        <img src="profile.jpg" alt="Profile" class="profile">
-        <!-- Two buttons -->
-        <div class="buttons">
-          <!-- Button 1 links to a Linkedin page -->
-          <a href="https://www.linkedin.com/in/michaelcque/" class="button">Linkedin</a>
-          <!-- Button 2 opens an overlay of pdf document -->
-          <button class="button" id="open">Resume</button>
-        </div>
+
       </div>
     </section>
     <!-- Overlay section -->
