--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <h2>A Webfolio of Projects and Programs<h2>
       <p>By Michael Que</p>
       <p>San Francisco, California</p>
-        <img src="profile.jpg" alt="Profile" class="profile">
+        <img src="ProMgmt" alt="Profile" class="profile">
         <!-- Two buttons -->
         <div class="buttons">
           <!-- Button 1 links to a Linkedin page -->
