--- a/index.html
+++ b/index.html
@@ -49,19 +49,19 @@
       <!-- Container 1 -->
       <div class="container">
         <div class="Title">Projects</div>
-        <img src="FolderIcon.png" alt="FolderIcon.png" class="responsive-image">
+        <img src="FolderIcon.png" alt="FolderIcon.png" class="responsive-image" height="auto" width="150px">
         <div class="description">Description 1</div>
       </div>
       <!-- Container 2 -->
       <div class="container">
         <div class="Title">Consulting</div>
-        <img src="BizIcon.png" alt="BizIcon.png" class="responsive-image">
+        <img src="BizIcon.png" alt="BizIcon.png" class="responsive-image" height="auto" width="150px">
         <div class="description">Description 2</div>
       </div>
       <!-- Container 3 -->
       <div class="container">
         <div class="Title">eBookstore</div>
-        <img src="ShoppingBagsIcon.png" alt="ShoppingBagsIcon.png" class="responsive-image">
+        <img src="ShoppingBagsIcon.png" alt="ShoppingBagsIcon.png" class="responsive-image" height="auto" width="150px">
         <div class="description">Description 3</div>
       </div>
       <!-- Container 4 -->
