--- a/index.html
+++ b/index.html
@@ -48,21 +48,21 @@
 
       <!-- Container 1 -->
       <div class="container">
-        <div class="Title">Projects</div>
+        <div class="Title">s</div>
         <img src="FolderIcon.png" alt="FolderIcon.png" class="responsive-image" height="auto" width="150px">
-        <div class="description">Description 1</div>
+        <div class="description">Projects</div>
       </div>
       <!-- Container 2 -->
       <div class="container">
-        <div class="Title">Consulting</div>
+        <div class="Title"></div>
         <img src="BizIcon.png" alt="BizIcon.png" class="responsive-image" height="auto" width="150px">
-        <div class="description">Description 2</div>
+        <div class="description">Consulting</div>
       </div>
       <!-- Container 3 -->
       <div class="container">
-        <div class="Title">eBookstore</div>
+        <div class="Title"></div>
         <img src="ShoppingBagsIcon.png" alt="ShoppingBagsIcon.png" class="responsive-image" height="auto" width="150px">
-        <div class="description">Description 3</div>
+        <div class="description">eBookstore</div>
       </div>
       <!-- Container 4 -->
 
@@ -80,12 +80,14 @@
     <div class="container">
         <img src="ProjMgmt.png" alt="Project Management" class="iresponsive-image">
       </div>
-
+</body>
   <footer>
+    <style background="black" padding="16px 16px">
       <div>&copy; 2023 Miguelano Designs</div>
       <a href="#">About</a> | <a href="#">Contact</a>
+      </style>
   </footer>
 
-</body>
+
 
 </html>
