--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       <!-- Container 1 -->
       <div class="container">
-        <div class="Title">s</div>
+        <div class="Title"></div>
         <img src="FolderIcon.png" alt="FolderIcon.png" class="responsive-image" height="auto" width="150px">
         <div class="description">Projects</div>
       </div>
