--- a/index.html
+++ b/index.html
@@ -78,14 +78,12 @@
   </main>
   <!-- Footer section -->
     <div class="container">
-        <img src="ProjMgmt.png" alt="Project Management" class="iresponsive-image">
+        <img src="ProjMgmt.png" alt="Project Management" class="responsive-image">
       </div>
 </body>
   <footer>
-    <style background="black" padding="16px 16px">
-      <div>&copy; 2023 Miguelano Designs</div>
+      <h4>&copy; 2023 Miguelano Designs</h4>
       <a href="#">About</a> | <a href="#">Contact</a>
-      </style>
   </footer>
 
 
