--- a/index.html
+++ b/index.html
@@ -8,23 +8,40 @@
   <title>The Work Within Queue</title>
 
   <!-- Header section -->
-  <header id="header">
-    <!-- Logo on the left -->
-    <div class="logo">
-      <img src="QueueLogo.png" alt="Logo" class="logo-image">
-    </div>
-    <!-- Navigation tabs in the middle -->
-      <nav class="nav-tab">
-     <a href="#" class="nav-link">Home</a>
-    <a href="#" class="nav-link">About</a>
-   <a href="#" class="nav-link">Contact</a>
-    </nav>
-    <!-- Icon and login button on the right -->
-    <div class="login">
-      <i class="fas fa-user-circle icon"></i>
-      <button class="login-button">Login</button>
-    </div>
-  </header>
+<header id="header">
+  <!-- Logo on the left -->
+  <div class="logo">
+    <img src="QueueLogo.png" alt="Logo" class="logo-image">
+  </div>
+  <!-- Navigation tabs in the middle -->
+  <nav class="nav-tab">
+    <ul>
+      <li><a href="#" class="nav-link">Home</a>
+        <!-- Dropdown list for home tab -->
+        <ul>
+          <li><a href="#">Option 1</a></li>
+          <li><a href="#">Option 2</a></li>
+          <li><a href="#">Option 3</a></li>
+        </ul>
+      </li>
+      <li><a href="#" class="nav-link">About</a>
+        <!-- Dropdown list for about tab -->
+        <ul>
+          <li><a href="#">Option 1</a></li>
+          <li><a href="#">Option 2</a></li>
+          <li><a href="#">Option 3</a></li>
+        </ul>
+      </li>
+      <li><a href="#" class="nav-link">Contact</a></li>
+    </ul>
+  </nav>
+  <!-- Icon and login button on the right -->
+  <div class="login">
+    <i class="fas fa-user-circle icon"></i>
+    <button class="login-button">Login</button>
+  </div>
+</header>
+
 </head>
 
     <!-- Main section -->
