--- a/index.html
+++ b/index.html
@@ -24,15 +24,11 @@
   <nav class="nav-tab">
     <ul>
       <li><a href="#" class="nav-link">Home</a>
-        <!-- Dropdown list for home tab -->
-        <ul>
           <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Services</a></li>
-        </ul>
+          <li><a href="#">Services</a></li><!-- Dropdown list for home tab -->
+        <ul>
       </li>
       <li><a href="#" class="nav-link">About</a>
-        <!-- Dropdown list for about tab -->
-        <ul>
           <li><a href="#">Profile</a></li>
           <li><a href="#"></a>My Blog</li>
           <li><a href="#">The Company</a></li>
