--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
 </head>
 
 <body>
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>The Work Within Queue</title>
+</head>
+
+<body>
   <!-- Header section -->
   <header id="header">
     <div class="header-content">
@@ -19,27 +29,33 @@
         <img src="QueueLogo.png" alt="Logo" class="logo-image">
       </div>
   
-  <nav class="nav-tab">
-    <ul>
-      <li><a href="#" class="nav-link">Home</a>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Services</a></li><!-- Dropdown list for home tab -->
+      <nav class="navigation">
         <ul>
-      </li>
-      <li><a href="#" class="nav-link">About</a>
-          <li><a href="#">Profile</a></li>
-          <li><a href="#"></a>My Blog</li>
-          <li><a href="#">The Company</a></li>
+          <li><a href="#" class="nav-link">Home</a>
+            <ul>
+              <li><a href="#">Portfolio</a></li>
+              <li><a href="#">Services</a></li>
+            </ul>
+          </li>
+          <li><a href="#" class="nav-link">About</a>
+            <ul>
+              <li><a href="#">Profile</a></li>
+              <li><a href="#">My Blog</a></li>
+              <li><a href="#">The Company</a></li>
+            </ul>
+          </li>
+          <li><a href="#" class="nav-link">Contact</a></li>
         </ul>
-      </li>
-      <li><a href="#" class="nav-link">Contact</a></li>
-    </ul>
+      </nav>
+
       <div class="login">
         <i class="fas fa-user-circle icon"></i>
         <button class="login-button">Login</button>
       </div>
+    </div>
   </header>
 
+  <!-- Rest of your HTML content -->
   <!-- Main section -->
   <main id="main">
     <!-- Menu section with four containers -->
