--- a/index.html
+++ b/index.html
@@ -32,17 +32,18 @@
       <nav class="navigation">
         <ul>
           <li><a href="#" class="nav-link">Home</a>
-            <ul>
+              <nav class="subnavigation">
               <li><a href="#">Portfolio</a></li>
               <li><a href="#">Services</a></li>
+              </div>
             </ul>
           </li>
           <li><a href="#" class="nav-link">About</a>
-            <ul>
+            <nav class="subnavigation">
               <li><a href="#">Profile</a></li>
               <li><a href="#">My Blog</a></li>
               <li><a href="#">The Company</a></li>
-            </ul>
+            <div>
           </li>
           <li><a href="#" class="nav-link">Contact</a></li>
         </ul>
