--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       }
 
       .navigation>li {
+        flex-direction: row;
         position: relative;
         transition: all 0.5s ease;
         flex-grow: 1;
@@ -40,6 +41,7 @@
 
       .navigation a {
         display: flex;
+        flex-direction: row;
         align-items: center;
         justify-content: center;
         text-align: center;
