--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
 
 <body>
   <!-- Header section -->
+  <header class="nav">
   <header id="header">
     <div class="header-content">
       <div class="logo">
@@ -204,6 +205,7 @@
           </li>
           <li tabindex="0"><a href="#" class="nav-link">Contact</a></li>
         </ul>
+    </div>
       </nav>
 
       <div class="login">
