--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
       transition: background-color 0.3s;
       width: 100%;
       margin-bottom: 16px;
+      box-sizing: border-box;
     }
 
     .container:hover {
@@ -162,6 +163,8 @@
       .logo,
       .login {
         margin: 0 auto;
+        width: 50px;
+        height: 50px;
       }
 
       .container {
@@ -229,13 +232,6 @@
           <a href="https://www.linkedin.com/in/michaelcque/" class="button">Linkedin</a>
           <button class="button" id="open">Resume</button>
         </div>
-      </article>
-
-      <!-- Container 0 -->
-      <article class="container">
-        <div class="title">Projects</div>
-        <img src="FolderIcon.png" alt="FolderIcon.png" class="responsive-image">
-        <div class="description">Projects description goes here.</div>
       </article>
 
       <!-- Container 1 -->
