--- a/index.html
+++ b/index.html
@@ -4,81 +4,112 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>The Work Within Queue</title>
-
-  <!-- Header section -->
-  <header id="header">
-    <!-- Logo on the left -->
-    <div class="logo">
-      <img src="QueueLogo.png" alt="Logo" class="logo-image">
-    </div>
-    <!-- Navigation tabs in the middle -->
-      <nav class="nav-tab">
-     <a href="#" class="nav-link">Home</a>
-    <a href="#" class="nav-link">About</a>
-   <a href="#" class="nav-link">Contact</a>
-    </nav>
-    <!-- Icon and login button on the right -->
-    <div class="login">
-      <i class="fas fa-user-circle icon"></i>
-      <button class="login-button">Login</button>
-    </div>
-  </header>
+  <meta name="description" content="The Work Within Queue - A Webfolio of Projects and Programs by Michael Que">
+  <meta name="author" content="Michael Que">
 </head>
-  <!-- Main section -->
-  <main id="main">
-    <!-- Menu section with four containers -->
-    <section id="menu">
-      <!-- Container 1 -->
-      <div class="container">
-        <div class="Projects">Title 1</div>
-        <img src="FolderIcon.png" alt="FolderIcon.png" class="image">
-        <div class="description">Description 1</div>
+<body>
+<div class="Frame8" style="width: 1440px; height: 981px; border-radius: 16px; overflow: hidden; flex-direction: column; justify-content: flex-start; align-items: center; display: inline-flex">
+  <div class="Header" style="align-self: stretch; padding-left: 32px; padding-right: 32px; padding-top: 16px; padding-bottom: 16px; background: black; justify-content: space-between; align-items: center; display: inline-flex">
+    <div class="Span" style="text-align: center; color: white; font-size: 14px; font-family: Roboto; font-weight: 700; text-transform: uppercase; line-height: 24px; letter-spacing: 0.50px; word-wrap: break-word">the work within queue</div>
+    <div class="Line1" style="width: 262px; height: 0px; border: 1px rgba(0, 0, 0, 0.12) solid"></div>
+    <div class="TabItem" style="height: 48px; flex-direction: column; justify-content: flex-start; align-items: center; display: inline-flex">
+      <div class="Frame" style="align-self: stretch; flex: 1 1 0; padding-left: 16px; padding-right: 16px; flex-direction: column; justify-content: center; align-items: center; display: flex">
+        <div class="ItemOne" style="text-align: center; color: white; font-size: 14px; font-family: Roboto; font-weight: 500; text-transform: uppercase; line-height: 16px; letter-spacing: 1.25px; word-wrap: break-word">HOME</div>
       </div>
-      <!-- Container 2 -->
-      <div class="container">
-        <div class="Consulting">Title 2</div>
-        <img src="BizIcon.png" alt="BizIcon.png" class="image">
-        <div class="description">Description 2</div>
+      <div class="Divider" style="width: 76px; height: 2px; position: relative; background: rgba(0, 0, 0, 0)"></div>
+    </div>
+    <div class="TabItem" style="height: 48px; flex-direction: column; justify-content: flex-start; align-items: center; display: inline-flex">
+      <div class="Frame" style="align-self: stretch; flex: 1 1 0; padding-left: 16px; padding-right: 16px; flex-direction: column; justify-content: center; align-items: center; display: flex">
+        <div class="ItemOne" style="text-align: center; color: white; font-size: 14px; font-family: Roboto; font-weight: 500; text-transform: uppercase; line-height: 16px; letter-spacing: 1.25px; word-wrap: break-word">CONTACT</div>
       </div>
-      <!-- Container 3 -->
-      <div class="container">
-        <div class="eBookstore">Title 3</div>
-        <img src="ShoppingBagsIcon.png" alt="ShoppingBagsIcon.png" class="image">
-        <div class="description">Description 3</div>
+      <div class="Divider" style="width: 103px; height: 2px; position: relative; background: rgba(0, 0, 0, 0)"></div>
+    </div>
+    <div class="TabItem" style="height: 48px; flex-direction: column; justify-content: flex-start; align-items: center; display: inline-flex">
+      <div class="Frame" style="align-self: stretch; flex: 1 1 0; padding-left: 16px; padding-right: 16px; flex-direction: column; justify-content: center; align-items: center; display: flex">
+        <div class="ItemOne" style="text-align: center; color: white; font-size: 14px; font-family: Roboto; font-weight: 500; text-transform: uppercase; line-height: 16px; letter-spacing: 1.25px; word-wrap: break-word">ABOUT</div>
       </div>
-      <!-- Container 4 -->
-      <div class="container">
-        <!-- Profile picture -->
-        <img src="profile.jpg" alt="Profile" class="profile">
-        <!-- Two buttons -->
-        <div class="buttons">
-          <!-- Button 1 links to a Linkedin page -->
-          <a href="https://www.linkedin.com/in/michaelcque/" class="button">Linkedin</a>
-          <!-- Button 2 opens an overlay of pdf document -->
-          <button class="button" id="open">Resume</button>
+      <div class="Divider" style="width: 83px; height: 2px; position: relative; background: rgba(0, 0, 0, 0)"></div>
+    </div>
+    <div class="Line1" style="width: 262px; height: 0px; border: 1px rgba(0, 0, 0, 0.12) solid"></div>
+    <div class="Chip" style="height: 32px; padding-left: 12px; padding-right: 12px; padding-top: 6px; padding-bottom: 6px; background: #3F51B5; border-radius: 16px; overflow: hidden; justify-content: space-between; align-items: center; display: flex">
+      <div class="VIcon" style="width: 12px; text-align: center; color: white; font-size: 14px; font-family: Material Icons; font-weight: 400; line-height: 14px; word-wrap: break-word">person</div>
+      <div class="Span" style="text-align: center; color: white; font-size: 14px; font-family: Roboto; font-weight: 400; line-height: 20px; word-wrap: break-word">default</div>
+      <div class="VIcon" style="width: 12px; text-align: center; color: white; font-size: 14px; font-family: Material Icons; font-weight: 400; line-height: 14px; word-wrap: break-word">cancel</div>
+    </div>
+  </div>
+  <div class="Frame1" style="width: 1440px; flex: 1 1 0; flex-direction: column; justify-content: center; align-items: center; gap: 10px; display: flex">
+    <img style="width: 1440px; height: 843px" src="https://via.placeholder.com/1440x843" />
+    <div class="Container" style="width: 1123px; background: rgba(0, 0, 0, 0.20); justify-content: flex-start; align-items: center; display: inline-flex">
+      <div class="Box" style="width: 561.50px; padding-top: 183px; padding-bottom: 210px; padding-left: 101px; padding-right: 101px; background: rgba(25, 118, 210, 0.12); flex-direction: column; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
+        <div class="Frame3" style="width: 301px; flex-direction: column; justify-content: space-between; align-items: center; display: flex">
+          <div class="Messages" style="align-self: stretch; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
+            <div class="DefaultSlot" style="text-align: center; color: white; font-size: 57px; font-family: Roboto; font-weight: 400; line-height: 60px; letter-spacing: 0.50px; word-wrap: break-word">Default Slot</div>
+          </div>
+          <div class="DefaultSlot" style="align-self: stretch; text-align: center; color: white; font-size: 48px; font-family: Roboto; font-weight: 400; line-height: 50px; word-wrap: break-word">Default Slot</div>
+          <div class="DefaultSlot" style="align-self: stretch; text-align: center; color: white; font-size: 34px; font-family: Roboto; font-weight: 400; line-height: 40px; letter-spacing: 0.25px; word-wrap: break-word">Default Slot</div>
+          <div class="DefaultSlot" style="align-self: stretch; text-align: center; color: white; font-size: 34px; font-family: Roboto; font-weight: 400; line-height: 40px; letter-spacing: 0.25px; word-wrap: break-word">Default Slot</div>
+          <div class="Button" style="width: 110px; height: 40px; padding-left: 16px; padding-right: 16px; padding-top: 8px; padding-bottom: 8px; background: #4CAF50; border-radius: 50px; justify-content: space-between; align-items: center; display: inline-flex">
+            <div class="Content" style="width: 78px; align-self: stretch; padding-top: 11px; padding-bottom: 11px; justify-content: flex-start; align-items: center; gap: 8px; display: flex">
+              <div class="Text" style="text-align: center; color: white; font-size: 14px; font-family: Roboto; font-weight: 500; text-transform: uppercase; line-height: 36px; letter-spacing: 1.25px; word-wrap: break-word">pROJECTS</div>
+            </div>
+          </div>
         </div>
       </div>
-    </section>
-    <!-- Overlay section -->
-    <section id="overlay">
-      <!-- Pdf document -->
-      <object data="resume.pdf" type="application/pdf" class="pdf"></object>
-      <!-- X mark to close the overlay -->
-      <span id="close">×</span>
-    </section>
-  </main>
-  <!-- Footer section -->
-    <div class="container">
-        <img src="ProjMgmt.png" alt="Project Management" class="image">
+      <div class="Container" style="flex: 1 1 0; height: 675px; padding: 100px; background: rgba(25, 118, 210, 0.12); justify-content: center; align-items: flex-start; display: flex">
+        <div class="Carousel" style="flex: 1 1 0; height: 475px; background: rgba(25, 118, 210, 0.12); flex-direction: column; justify-content: flex-start; align-items: center; display: inline-flex">
+          <div class="Frame" style="align-self: stretch; flex: 1 1 0; background: #263238; border-top-left-radius: 8px; border-top-right-radius: 8px; justify-content: flex-start; align-items: center; display: inline-flex">
+            <div class="Frame" style="flex: 1 1 0; height: 500px; padding-left: 16px; flex-direction: column; justify-content: center; align-items: flex-start; display: inline-flex">
+              <div class="Button" style="width: 32px; height: 32px; padding-left: 16px; padding-right: 16px; background: rgba(0, 0, 0, 0.38); border-radius: 32px; justify-content: center; align-items: center; display: inline-flex">
+                <div class="VIcon" style="text-align: center; color: white; font-size: 24px; font-family: Material Icons; font-weight: 400; line-height: 24px; word-wrap: break-word">navigate_before</div>
+              </div>
+            </div>
+            <div class="Frame" style="flex: 1 1 0; height: 500px; padding-right: 16px; justify-content: flex-end; align-items: center; display: flex">
+              <div class="Button" style="width: 32px; height: 32px; padding-left: 16px; padding-right: 16px; background: rgba(0, 0, 0, 0.38); border-radius: 32px; justify-content: center; align-items: center; display: flex">
+                <div class="VIcon" style="text-align: center; color: white; font-size: 24px; font-family: Material Icons; font-weight: 400; line-height: 24px; word-wrap: break-word">navigate_next</div>
+              </div>
+            </div>
+          </div>
+          <div class="VCarouselControls" style="align-self: stretch; height: 361.50px; transform: rotate(90deg); transform-origin: 0 0; background: rgba(0, 0, 0, 0.60); border-top-left-radius: 8px; border-top-right-radius: 8px; overflow: hidden; justify-content: center; align-items: center; display: inline-flex">
+            <div class="VItemGroup" style="transform: rotate(-90deg); transform-origin: 0 0; justify-content: flex-start; align-items: center; gap: 16px; display: flex">
+              <div class="VIcon" style="width: 20px; height: 20px; position: relative">
+                <div class="Background" style="width: 20px; height: 20px; left: 0px; top: 0px; position: absolute; background: rgba(255, 255, 255, 0.18); border-radius: 9999px"></div>
+                <div class="Circle" style="width: 12px; height: 12px; left: 4px; top: 4px; position: absolute; background: rgba(255, 255, 255, 0.50); border-radius: 9999px"></div>
+              </div>
+              <div class="VIcon" style="width: 20px; height: 20px; position: relative">
+                <div class="Circle" style="width: 12px; height: 12px; left: 4px; top: 4px; position: absolute; background: rgba(255, 255, 255, 0.50); border-radius: 9999px"></div>
+              </div>
+              <div class="VIcon" style="width: 20px; height: 20px; position: relative">
+                <div class="Circle" style="width: 12px; height: 12px; left: 4px; top: 4px; position: absolute; background: rgba(255, 255, 255, 0.50); border-radius: 9999px"></div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-
-  <footer>
-      <div>&copy; 2023 Miguelano Designs</div>
-      <a href="#">About</a> | <a href="#">Contact</a>
-  </footer>
-
+    </div>
+  </div>
+  <div class="DataFooter" style="align-self: stretch; height: 58px; padding-left: 32px; padding-right: 32px; padding-top: 4px; padding-bottom: 4px; background: black; justify-content: flex-end; align-items: center; gap: 32px; display: inline-flex">
+    <div class="TheWebfolio" style="text-align: right; color: white; font-size: 12px; font-family: Roboto; font-weight: 400; line-height: 20px; letter-spacing: 0.40px; word-wrap: break-word">THE WEBFOLIO</div>
+    <div class="Space" style="flex: 1 1 0; text-align: center; color: white; font-size: 12px; font-family: Roboto; font-weight: 400; line-height: 20px; letter-spacing: 0.40px; word-wrap: break-word">SPACE</div>
+    <div class="RowsPerPage" style="text-align: right; color: white; font-size: 12px; font-family: Roboto; font-weight: 400; line-height: 20px; letter-spacing: 0.40px; word-wrap: break-word">Rows per page:</div>
+    <div class="SelectSlot" style="width: 33px; flex-direction: column; justify-content: flex-start; align-items: flex-start; display: inline-flex">
+      <div class="Frame" style="align-self: stretch; height: 26px; padding-top: 8px; padding-bottom: 8px; justify-content: flex-start; align-items: center; gap: 10px; display: inline-flex">
+        <div class="InputSlot" style="flex: 1 1 0; height: 20px; justify-content: flex-start; align-items: center; gap: 10px; display: flex">
+          <div class="DefaultSlot" style="color: white; font-size: 12px; font-family: Roboto; font-weight: 400; line-height: 20px; letter-spacing: 0.40px; word-wrap: break-word">1</div>
+        </div>
+        <div class="MIcon" style="width: 24px; height: 24px; justify-content: center; align-items: center; display: flex">
+          <div class="VIcon" style="text-align: center; color: white; font-size: 24px; font-family: Material Icons; font-weight: 400; line-height: 24px; word-wrap: break-word">arrow_drop_down</div>
+        </div>
+      </div>
+      <div class="Divider" style="width: 33px; height: 1px; position: relative; background: rgba(0, 0, 0, 0.42)"></div>
+    </div>
+    <div class="Of1" style="text-align: right; color: white; font-size: 12px; font-family: Roboto; font-weight: 400; line-height: 20px; letter-spacing: 0.40px; word-wrap: break-word">1 of 1</div>
+    <div class="Button" style="width: 32px; height: 32px; padding-left: 16px; padding-right: 16px; border-radius: 32px; justify-content: center; align-items: center; display: flex">
+      <div class="VIcon" style="text-align: center; color: white; font-size: 24px; font-family: Material Icons; font-weight: 400; line-height: 24px; word-wrap: break-word">chevron_left</div>
+    </div>
+    <div class="Button" style="width: 32px; height: 32px; padding-left: 16px; padding-right: 16px; background: white; border-radius: 32px; justify-content: center; align-items: center; display: flex">
+      <div class="VIcon" style="text-align: center; color: rgba(0, 0, 0, 0.26); font-size: 24px; font-family: Material Icons; font-weight: 400; line-height: 24px; word-wrap: break-word">navigate_next</div>
+    </div>
+  </div>
+</div>
 </body>
-
 </html>
