--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     .navigation {
       max-width: 600px;
       width: 100%;
-      display: flex;
+      display: inline;
       flex-direction: row;
       list-style-type: none;
       align-items: center;
